# signal-wars

./: .env.example  .gitignore  AGENT_API.md  ARCHITECTURE.md  Anchor.toml  MOLTBOOK_INTEGRATION.md  README.md  SKILL.md  demo-script.md  openapi.json  package-lock.json  package.json  tailwind.config.js  test-devnet-extended.js  test-devnet.js  test-idl.json  test-resolve.js  test-short-season.js  tsconfig.json  tweet-thread.txt
.secrets/: devnet-wallet.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md
programs/signal-wars/: Anchor.toml  Cargo.toml  tsconfig.json
programs/signal-wars/src/: lib.rs
public/: auth.md
scripts/: generate-wallet.js  generate-wallet.ts  verify-deployment.js  verify-deployment.ts
scripts/demo/: .gitignore  README.md  agent-personalities.ts  batch-run.ts  demo-agents.ts  package-lock.json  package.json  setup.js  setup.ts  tsconfig.json  types.ts  utils.ts
sdk/: agent-sdk.ts  client.ts
sdk/idl/: signal_wars.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/: README.md
src/components/: AgentCard.tsx  AudienceSelector.tsx  DuelArena.tsx  Leaderboard.tsx  MyAgents.tsx  PredictionInterface.tsx  SeasonInfo.tsx  WalletProvider.tsx
src/components/duels/: DuelArena.tsx  DuelCard.tsx  DuelCreationModal.tsx  DuelResults.tsx
src/components/ui/: Achievement.tsx  (+8 more)
src/lib/: api-types.ts  api-utils.ts  blockchain-sdk.ts  cors.ts  moltbook-auth.ts  real-blockchain-sdk.ts  tokens.ts  utils.ts  wallet.ts
src/types/: index.ts
tests/: README.md  devnet-test.js  signal-wars.ts  test-utils.ts  tsconfig.json
types/: signal_wars.ts
(+12 files in other folders)
