[package]
name = "signal-wars"
version = "0.1.0"
description = "AI Agent Arena for crypto predictions on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "signal_wars"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
